sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:10: error: ';' expected but ')' found.
    swap(i,mem))
               ^